# cnmcu

./: .gitignore  build.gradle  build.gradle.kts  gradle.properties  log4j-dev.xml  settings.gradle.kts
.github/workflows/: build.yml  deploy.yml
bindings/: build.gradle.kts
bindings/src/main/java/com/elmfer/cnmcu/natives/: CNMCUNatives.java  NanoMCU.java  NativeObject.java  NativesLoader.java  StrongNativeObject.java  WeakNativeObject.java
build-logic/: build.gradle.kts  gradle.properties  settings.gradle.kts
build-logic/src/main/kotlin/: Compile.kt  GenerateSources.kt  cnmcu-base-conventions.gradle.kts  cnmcu-java-conventions.gradle.kts
buildSrc/: build.gradle  build.gradle.kts  gradle.properties
buildSrc/src/main/java/tools/elmfer/: CompileNativesTask.java  GenNativeSourcesTask.java  SaveVersionTask.java
buildSrc/src/main/kotlin/tools/elmfer/: Compile.kt  GenerateSources.kt
common/: build.gradle.kts
common/src/main/java/com/elmfer/cnmcu/common/: Common.java
gradle/: libs.versions.toml
natives/: build.gradle.kts
natives/src/: CMakeLists.txt  cnmcu.cpp  cnmcu.hpp
natives/src/cnmcu/: CNUART.cpp  CNUART.hpp  mos6502.hpp
src/client/java/com/elmfer/cnmcu/client/: CNMCUClient.java  ClientInitialiser.java  EventHandler.java
src/client/java/com/elmfer/cnmcu/client/config/: Config.java  ConfigRecord.java  ToolchainConfig.java  (+1 more)
src/client/resources/: cnmcu.client.mixin.json
src/main/cpp/: CMakeLists.txt  cnmcu.cpp
src/main/cpp/bridge/: .gitignore  cnmcuJava.cpp  cnmcuJava.h  com_elmfer_cnmcu_mcu_NanoMCU.cpp  com_elmfer_cnmcu_mcu_cpu_MOS6502.cpp  com_elmfer_cnmcu_mcu_modules_CNEL.cpp  com_elmfer_cnmcu_mcu_modules_CNGPIO.cpp  com_elmfer_cnmcu_mcu_modules_CNRAM.cpp  com_elmfer_cnmcu_mcu_modules_CNROM.cpp  com_elmfer_cnmcu_mcu_modules_CNUART.cpp
src/main/cpp/cnmcu/: CNEL.hpp  CNGPIO.hpp  CNRAM.hpp  CNROM.hpp  CNUART.hpp  Nano.cpp  Nano.hpp  happly.h  mos6502.cpp  mos6502.hpp
src/main/java/com/elmfer/cnmcu/: CNMCU.java  CNMCUClient.java  CodeNodeMicrocontrollers.java  CodeNodeMicrocontrollersClient.java  DataComponents.java  EventHandler.java  Initialiser.java
src/main/java/com/elmfer/cnmcu/blockentities/: BlockEntities.java  CNnanoBlockEntity.java  NanoBlockEntity.java
src/main/java/com/elmfer/cnmcu/blocks/: Blocks.java  CNnanoBlock.java  NanoBlock.java
src/main/java/com/elmfer/cnmcu/config/: Config.java  ModSetup.java
src/main/java/com/elmfer/cnmcu/cpp/: NativeObject.java  NativesLoader.java  NativesUtils.java  StrongNativeObject.java  WeakNativeObject.java
src/main/java/com/elmfer/cnmcu/datagen/: CNMCUBlockLootTableProvider.java  CNMCUDataGenerator.java  CNMCUEnglishLangProvider.java  CNMCUModelProvider.java
src/main/java/com/elmfer/cnmcu/mcu/: NanoMCU.java  Sketches.java  Toolchain.java
src/main/java/com/elmfer/cnmcu/menu/: IDEMenu.java  Menus.java
src/main/java/com/elmfer/cnmcu/mixins/: AbstractContainerMenuAccessor.java  DrawContextInvoker.java  GuiContextInvoker.java  GuiGraphicsAccessor.java  ImGuiImplGl3Mixin.java  ServerPlayerContainerSynchronizerAccessor.java
src/main/java/com/elmfer/cnmcu/network/: IDEScreenHeartbeatPayload.java  IDEScreenMCUControlPayload.java  IDEScreenSaveCodePayload.java  IDEScreenSyncPayload.java  Networking.java  Packets.java  UploadROMC2S2CPacket.java  UploadROMRequestPayload.java  UploadROMResponsePayload.java
src/main/java/com/elmfer/cnmcu/ui/: IDEScreen.java  QuickReferences.java  UIRender.java
src/main/java/com/elmfer/cnmcu/util/: BuildProcess.java  CNMCUCodecs.java  DirectionUtil.java  HTTPSFetcher.java  ResourceLoader.java
src/main/resources/: cnmcu.mixin.json  fabric.mod.json
src/main/resources/assets/cnmcu/blockstates/: nano.json
src/main/resources/assets/cnmcu/models/block/: nano.json
src/main/resources/assets/cnmcu/models/item/: nano.json
src/main/resources/assets/cnmcu/setup/: imgui.ini
src/main/resources/data/cnmcu/loot_table/blocks/: nano.json
(+32 files in other folders)
